--- a/RoLangTree/index.html
+++ b/RoLangTree/index.html
@@ -31,12 +31,12 @@
   </script>
 </head>
 <body onload="init();">
-	<h2 id="sentenceText">&nbsp;</h2>
-	<div class="game">
+  <div id="gameBox">
+    <h2 id="sentenceText">&nbsp;</h2>
 		<canvas id="gameCanvas" width="1050" height="650">
 			Browserul dvs nu este suportat. Recomandam Chrome, Firefox sau Internet Explorer 11.
 		</canvas>
-	</div>
-
+	
+  </div>
 </body>
 </html>
